# BrainFuck2

BrainFuck2/: BrainFuck2.sln
BrainFuck2/BrainFuck2/: BeginWhileExpression.cpp  BeginWhileExpressionHeader.h  BiggerExpression.cpp  BiggerExpressionHeader.h  BrainFuck2.vcxproj  BrainFuck2.vcxproj.filters  CMakeLists.txt  Checker.cpp  Checker.h  DotExpression.cpp  DotExpression.h  EndWhileExpression.cpp  EndWhileExpressionHeader.h  Executor.cpp  Executor.h  Expression.cpp  Expression.h  Libs.h  MainHeader.h  Manager.cpp  Manager.h  MinusExpression.cpp  MinusExpressionHeader.h  Parser.cpp  ParserHeader.h  PlusExpression.cpp  PlusExpressionHeader.h  Rules.cpp  Rules.h  SmallerExpression.cpp  SmallerExpressionHeader.h  Source.cpp
BrainFuck2/BrainFuck2/Debug/: vc140.idb
BrainFuck2/BrainFuck2/Debug/BrainFuck2.tlog/: BrainFuck2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BrainFuck2/Debug/: BrainFuck2.ilk
